--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,7 +140,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: registry.fly.io
-          username: ""
+          username: watchlist
           password: ${{ secrets.FLY_API_TOKEN }}
 
       - name: 🐳 Docker build
