--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "watchlist",
   "private": true,
-  "description": "",
+  "description": "A web app to search for, organize and ",
   "license": "",
   "sideEffects": false,
   "scripts": {
@@ -32,10 +32,18 @@
     "/public/build"
   ],
   "dependencies": {
+    "@mantine/core": "^4.0.9",
+    "@mantine/dates": "^4.0.9",
+    "@mantine/form": "^4.0.9",
+    "@mantine/hooks": "^4.0.9",
+    "@mantine/modals": "^4.0.9",
+    "@mantine/rte": "^4.0.9",
+    "@mantine/ssr": "^4.0.9",
     "@prisma/client": "^3.11.0",
     "@remix-run/react": "^1.3.3",
     "@remix-run/serve": "^1.3.3",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.3.3",
