--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@remix-run/serve": "^1.3.3",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.0",
+    "nanoid": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.3.3",
