--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,4 @@
 {
-  "extends": [
-    "config:base",
-    ":rebaseStalePrs"
-  ],
-  "baseBranches": [
-    "main",
-    "dev"
-  ]
+  "extends": ["config:base", ":rebaseStalePrs"],
+  "baseBranches": ["main", "dev"]
 }
