--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,8 @@ jobs:
 
       - name: ⚡ Run vitest
         run: npm run test -- --coverage
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v2
 
   cypress:
     name: ⚫️ Cypress
