--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@mantine/form": "4.1.1",
     "@mantine/hooks": "4.1.1",
     "@mantine/modals": "4.1.1",
-    "@mantine/rte": "4.1.1",
+    "@mantine/rte": "^3.4.3",
     "@mantine/ssr": "4.1.1",
     "@prisma/client": "3.11.1",
     "@remix-run/react": "1.3.4",
@@ -57,8 +57,10 @@
     "tiny-invariant": "1.2.0"
   },
   "devDependencies": {
+    "@cypress/code-coverage": "^3.9.12",
     "@faker-js/faker": "6.1.1",
-    "@remix-run/dev": "1.3.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@remix-run/dev": "^1.2.3",
     "@remix-run/eslint-config": "1.3.4",
     "@testing-library/cypress": "8.0.2",
     "@testing-library/jest-dom": "5.16.3",
@@ -72,7 +74,7 @@
     "binode": "1.0.5",
     "c8": "7.11.0",
     "cross-env": "7.0.3",
-    "cypress": "9.5.3",
+    "cypress": "^9.5.3",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
     "happy-dom": "2.55.0",
@@ -81,9 +83,10 @@
     "prettier": "2.6.1",
     "prettier-plugin-tailwindcss": "0.1.8",
     "prisma": "3.11.1",
+    "source-map-support": "^0.5.21",
     "start-server-and-test": "1.14.0",
     "tailwindcss": "3.0.23",
-    "ts-node": "10.7.0",
+    "ts-node": "^10.7.0",
     "tsconfig-paths": "3.14.1",
     "typescript": "4.6.3",
     "vite-tsconfig-paths": "3.4.1",
@@ -94,5 +97,9 @@
   },
   "prisma": {
     "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "all": true
   }
 }
