--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "run-p dev:*",
     "dev:css": "npm run generate:css -- --watch",
     "dev:remix": "cross-env NODE_ENV=development binode --require ./mocks -- @remix-run/dev:remix dev",
-    "format": "prettier --write .",
+    "format": "eslint **/*.ts{,x} --fix",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "postinstall": "remix setup node",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -31,7 +31,6 @@
     "typecheck": "tsc -b && tsc -b cypress",
     "validate": "run-p \"test -- --run\" lint typecheck test:e2e:run"
   },
-  "prettier": {},
   "eslintIgnore": [
     "/node_modules",
     "/build",
@@ -44,10 +43,13 @@
     "@mantine/modals": "4.1.2",
     "@mantine/ssr": "4.1.2",
     "@prisma/client": "3.12.0",
-    "@remix-run/react": "1.3.4",
-    "@remix-run/serve": "1.3.4",
+    "@remix-run/node": "1.3.5",
+    "@remix-run/react": "1.3.5",
+    "@remix-run/serve": "1.3.5",
+    "@remix-run/server-runtime": "1.3.5",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.0",
+    "lodash": "^4.17.21",
     "nanoid": "3.3.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -56,18 +58,21 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.9.12",
+    "@eyecuelab/eslint-config-react": "1.0.1",
     "@faker-js/faker": "6.1.2",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@remix-run/dev": "1.3.4",
     "@remix-run/eslint-config": "1.3.4",
     "@testing-library/cypress": "8.0.2",
     "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.0.0",
+    "@testing-library/react": "13.0.eslin0",
     "@testing-library/user-event": "14.0.4",
     "@types/bcryptjs": "2.4.2",
     "@types/eslint": "8.4.1",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@typescript-eslint/eslint-plugin": "5.12.1",
+    "@typescript-eslint/parser": "5.12.1",
     "@vitejs/plugin-react": "1.3.0",
     "binode": "1.0.5",
     "c8": "7.11.0",
@@ -75,6 +80,13 @@
     "cypress": "9.5.3",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jest": "26.1.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "happy-dom": "2.55.0",
     "msw": "0.39.2",
     "npm-run-all": "4.1.5",
