--- a/package.json
+++ b/package.json
@@ -37,69 +37,69 @@
     "/public/build"
   ],
   "dependencies": {
-    "@mantine/core": "4.1.2",
-    "@mantine/form": "4.1.2",
-    "@mantine/hooks": "4.1.2",
-    "@mantine/modals": "4.1.2",
-    "@mantine/ssr": "4.1.2",
-    "@prisma/client": "3.12.0",
-    "@remix-run/node": "1.3.5",
-    "@remix-run/react": "1.3.5",
-    "@remix-run/serve": "1.3.5",
-    "@remix-run/server-runtime": "1.3.5",
+    "@mantine/core": "5.10.2",
+    "@mantine/form": "5.10.2",
+    "@mantine/hooks": "5.10.2",
+    "@mantine/modals": "5.10.2",
+    "@mantine/ssr": "5.10.2",
+    "@prisma/client": "4.9.0",
+    "@remix-run/node": "1.12.0",
+    "@remix-run/react": "1.12.0",
+    "@remix-run/serve": "1.12.0",
+    "@remix-run/server-runtime": "1.12.0",
     "bcryptjs": "2.4.3",
-    "dayjs": "1.11.0",
-    "lodash": "^4.17.21",
-    "nanoid": "3.3.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "remix": "1.3.4",
-    "tiny-invariant": "1.2.0"
+    "dayjs": "1.11.7",
+    "lodash": "4.17.21",
+    "nanoid": "4.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "remix": "1.12.0",
+    "tiny-invariant": "1.3.1"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.9.12",
-    "@eyecuelab/eslint-config-react": "1.0.1",
-    "@faker-js/faker": "6.1.2",
+    "@cypress/code-coverage": "3.10.0",
+    "@eyecuelab/eslint-config-react": "1.1.0",
+    "@faker-js/faker": "7.6.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@remix-run/dev": "1.3.4",
-    "@remix-run/eslint-config": "1.3.4",
-    "@testing-library/cypress": "8.0.2",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.0.eslin0",
-    "@testing-library/user-event": "14.0.4",
+    "@remix-run/dev": "1.12.0",
+    "@testing-library/cypress": "9.0.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/bcryptjs": "2.4.2",
-    "@types/eslint": "8.4.1",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "@typescript-eslint/eslint-plugin": "5.12.1",
-    "@typescript-eslint/parser": "5.12.1",
-    "@vitejs/plugin-react": "1.3.0",
+    "@types/eslint": "8.21.0",
+    "@types/lodash": "^4.14.191",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
+    "@vitejs/plugin-react": "3.1.0",
     "binode": "1.0.5",
-    "c8": "7.11.0",
+    "c8": "7.12.0",
     "cross-env": "7.0.3",
-    "cypress": "9.5.3",
-    "eslint": "8.12.0",
-    "eslint-config-prettier": "8.5.0",
+    "cypress": "12.5.1",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "8.6.0",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jest": "26.1.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
-    "happy-dom": "2.55.0",
-    "msw": "0.39.2",
+    "happy-dom": "8.1.4",
+    "msw": "0.49.2",
     "npm-run-all": "4.1.5",
-    "prettier": "2.6.2",
+    "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "0.1.8",
-    "prisma": "3.12.0",
+    "prisma": "4.9.0",
     "source-map-support": "0.5.21",
-    "start-server-and-test": "1.14.0",
-    "tailwindcss": "3.0.23",
-    "ts-node": "10.7.0",
-    "tsconfig-paths": "3.14.1",
-    "typescript": "4.6.3",
-    "vite-tsconfig-paths": "3.4.1",
+    "start-server-and-test": "1.15.2",
+    "tailwindcss": "3.2.4",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "4.1.2",
+    "typescript": "4.9.4",
+    "vite-tsconfig-paths": "3.6.0",
     "vitest": "0.8.4"
   },
   "engines": {
